# ai-compute-arbitrage-monitor

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  cloud-composer-build-and-push.yml  cloud-composer-sync-dags.yml  cloud-composer.yml  dataproc-build-and-push.yml  dataproc-sync-jobs.yml  dataproc.yml  dbt-cloud-run-build-and-push.yml
config/: settings.yaml
docs/: architecture.py
infra/airflow/: Dockerfile  Dockerfile.airflow  docker-compose.yml
infra/airflow/dags/: callable_builder.py  core_dag.py  core_dag_factory.py  dag.py  dag_factory.py  data_source_config.py  marts_dag_factory.py  pipeline_config.py  refine_strategy.py  transform_adapter.py  transform_strategy.py
infra/docker/: Dockerfile.dbt
infra/gcp/: Dockerfile  init-dependencies.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/: Dockerfile.composer  Dockerfile.dataproc  terraform.tfvars.example
infra/terraform/shared/: apis.tf  main.tf  outputs.tf  storage.tf  variables.tf
infrastructure/: docker-compose.yml
scripts/: package_dataproc_modules.py  sync_composer_modules.py
src/: __init__.py
src/bootstrap/: jobs.py
src/common/: classes.py  enums.py  types.py
src/config/: cluster.py  dbt.py  execution.py  file_config.py  http.py  kafka.py  loader.py  logging.py  paths.py  storage.py
src/config/apis/: erc.py  evn.py  exchange_rate.py  vast_ai.py
src/config/seeds/: erc.py  evn.py  open_db.py
src/config/sources/: exchange_rate.py  vast_ai.py
src/infrastructure/: docker-compose.yml
src/ingest/: base.py  evn_base.py  main.py
src/ingest/models/: electricity_tariff_block.py  electricity_tariff_fee.py  electricity_tariff_price.py  electricity_tariff_schedule.py  electricity_tariff_tier.py  electricity_tariff_window_schedule.py  exchange_rate.py  types.py  vast_ai_offer.py
src/ingest/seeds/: electricity_tariff_blocks.py  electricity_tariff_fees.py  electricity_tariff_price.py  electricity_tariff_prices.py  electricity_tariff_schedule.py  electricity_tariff_tiers.py  electricity_tariffs_schedule.py  (+1 more)
src/ingestion/: base.py  main.py
src/pubsub/: producer.py
src/refine/: base.py  init.py  main.py
src/serializers/: json_serializer.py
src/streaming/: init.py  main.py  schemas.py
src/transform/: dbt_project.yml  dependencies.yml  package-lock.yml  profiles.yml  profiles.yml.example
(+103 files in other folders)
