[project]
name = "gpu-arbitrage-monitor"
version = "0.1.0"
description = "GPU AI Compute Arbitrage Monitor - Tracks GPU pricing across cloud providers for arbitrage opportunities"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "gql>=3.4.1",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.0.0",
    "vastai-sdk>=0.2.5",
    "beautifulsoup4>=4.14.3",
    "confluent-kafka>=2.13.2",
    "google-cloud-storage>=3.9.0",
    "pyarrow>=23.0.1",
    "pyspark[sql]>=4.1.1",
    "pandas>=3.0.1",
    "grpcio-status>=1.78.0",
    "zstandard>=0.25.0",
    "dbt-duckdb>=1.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.290",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
