[project]
name = "gpu-arbitrage-monitor"
version = "0.1.0"
description = "GPU AI Compute Arbitrage Monitor - Tracks GPU pricing across cloud providers for arbitrage opportunities"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.33.0",
    "httpx>=0.24.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0",
    "gql>=3.4.1",
    "aiohttp>=3.13.4",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.2.2",
    "vastai-sdk>=1.0.8",
    "beautifulsoup4>=4.14.3",
    "google-cloud-storage>=2.4,<3.2",
    "pyarrow>=24.0.0",
    "pyspark[sql]>=4.1.1",
    "pandas>=3.0.2",
    "grpcio-status>=1.80.0",
    "zstandard>=0.25.0",
    "dbt-duckdb>=1.10.1",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-pubsub>=2.37.0",
    "google-cloud-dataproc>=5.27.0",
    "dbt-bigquery>=1.11.1",
    "diagrams>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.0.290",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[dependency-groups]
dev = [
    "apache-airflow[google]==3.1.7",
]
